--- a/09-example/style.css
+++ b/09-example/style.css
@@ -1,3 +1,21 @@
 img {
   width: 200px;
+  gap: 10px;
+  margin: 20px;
+  border-radius: 20px;
+  height: 150px;
+  object-fit: cover;
+}
+
+#container {
+  max-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: antiquewhite;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
 }
